...
                </View>
              </View>
              <View style={styles.locationDivider} />
              <View style={styles.locationBtns}>
                <TouchableOpacity style={styles.locationBtn} onPress={openGoogleMaps}>
                  <Ionicons name="navigate-outline" size={14} color={Colors.primary} />
                  <Text style={styles.locationBtnText}>Google Maps</Text>
                </TouchableOpacity>
                <View style={styles.locationBtnDivider} />
                <TouchableOpacity style={styles.locationBtn} onPress={openAppleMaps}>
                  <Ionicons name="map-outline" size={14} color={Colors.primary} />
                  <Text style={styles.locationBtnText}>Apple Maps</Text>
                </TouchableOpacity>
              </View>
            </View>
          </View>
        </View>
      </ScrollView>
...
